fix http calls and loading displayed on home screen

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -49,7 +49,7 @@
     Load more results...
   </button>
 
-  <mat-progress-spinner *ngIf="loading"
+  <mat-progress-spinner *ngIf="loading && queryTerm"
                         [diameter]="50"
                         [strokeWidth]="3"
                         mode="indeterminate">
